<resources>
    <string name="app_name" translatable="false">Mawared VAN Sale</string>
    <string name="client_name">Compnay Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Enter password</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in">Login</string>
    <string name="do_you_have_account">SinUp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="system_name">Mawared App.</string>
    <string name="system_version">Ver.0101</string>
    <string name="home_page_title">Dashboard</string>
    <string name="reports_page_title">Reports</string>
    <string name="login_page_title">Login</string>
    <string name="layout_invoice_list_title">Invoices</string>
    <string name="layout_invoice_entry_title">Invoice</string>
    <string name="layout_order_list_title">Orders</string>
    <string name="layout_order_entry_title">Order</string>
    <string name="layout_psorder_list_title">Pre-sale Orders</string>
    <string name="layout_psorder_entry_title">Pre-sale Order</string>
    <string name="layout_salereturn_list_title">Sales Return</string>
    <string name="layout_salereturn_entry_title">Sale Return</string>
    <string name="layout_receivable_list_title">Receipt Voucher</string>
    <string name="layout_receivable_entry_title">Receipt Voucher</string>
    <string name="layout_payable_list_title">Payment Voucher</string>
    <string name="layout_payable_entry_title">Payment Voucher</string>
    <string name="layout_settings_title">Settings</string>
    <string name="layout_customer_list_title">Customers</string>
    <string name="layout_customer_entry_title">Customer</string>
    <string name="layout_survey_list_title">Surveys</string>
    <string name="layout_survey_entry_title">Survey</string>
    <string name="layout_delivery_list_title">Delivery</string>
    <string name="layout_delivery_entry_title">Delivery</string>
    <string name="layout_transfer_list_title">Transfer</string>
    <string name="layout_transfer_entry_title">Transfer</string>
    <string name="layout_call_cycle_title">Call Cycle</string>
    <string name="layout_cashbook_statement_title">Cashbook Statement</string>
    <string name="layout_customer_statement_title">Customer Statement</string>
    <string name="layout_sales_statement_title">Sales Statement</string>
    <string name="layout_stock_statement_title">Stock Statement</string>
    <string name="layout_kpi_title">Key Performance Indecator</string>
    <string name="layout_customer_places_title">Customers Places</string>
    <string name="layout_entry_sub_title">Add/Edit</string>
    <string name="menu_ps_order">Presale Order</string>
    <string name="menu_sale_order">Sale Order</string>
    <string name="menu_sale">Sale Invoice</string>
    <string name="menu_sale_return">Sale Return</string>
    <string name="menu_receivable">Receipt</string>
    <string name="menu_payable">Payment</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_delivery">Delivery</string>
    <string name="menu_survey">Survey</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_notification">Alert</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_customer_statement">Customer Statement</string>
    <string name="menu_cashbook_statement">Cashbook Statement</string>
    <string name="menu_sales_statement">Sales Statement</string>
    <string name="menu_stock_statement">Stock Statement</string>
    <string name="lbl_receipt_title">Receipt</string>
    <string name="lbl_payment_title">Payment</string>
    <string name="lbl_doc_no">Invoice No</string>
    <string name="lbl_doc_date">Date</string>
    <string name="lbl_customer_name">Customer</string>
    <string name="lbl_salesman_name">Salesman</string>
    <string name="lbl_salesman_no">Salesman No</string>
    <string name="lbl_customer_name_en">Customer English Name</string>
    <string name="lbl_customer_name_ar">Customer Arabic Name</string>
    <string name="lbl_region_name">Region</string>
    <string name="lbl_count_items">Items count</string>
    <string name="btn_view_caption">View</string>
    <string name="btn_edit_caption">Edit</string>
    <string name="btn_delete_caption">Delete</string>
    <string name="lbl_barcode">Barcode</string>
    <string name="lbl_prod_name">Product</string>
    <string name="lbl_qty">Qty</string>
    <string name="lbl_gift_qty">Gift Qty</string>
    <string name="lbl_unit_price">Unit Price</string>
    <string name="hint_unit_price">5.95</string>
    <string name="lbl_usd_cr_symbol">$</string>
    <string name="lbl_line_total">Total</string>
    <string name="hint_line_total">119.00</string>
    <string name="lbl_discount_per">Disc %</string>
    <string name="lbl_discount">Discount</string>
    <string name="hint_zero">0.00</string>
    <string name="tag_qty">0.00</string>
    <string name="lbl_net_total">Net Total</string>
    <string name="tag_net_total">0.00</string>
    <string name="btn_new_caption">New</string>
    <string name="btn_save_caption">Save</string>
    <string name="lbl_ref_no">Select Invoice</string>
    <string name="lbl_expiry_date">Expire date</string>
    <string name="lbl_mfg_date">Mfg date</string>
    <string name="tag_search">Search</string>
    <string name="search_hint">Search for ...</string>
    <string name="add_invoice_button_tag">Add Invoice</string>
    <string name="tag_print">Print</string>
    <string name="btn_add_item_caption">add item</string>
    <string name="save_invoice">Save Invoice</string>
    <string name="btn_close_caption">Close</string>
    <string name="download_data_from_server">Download Data from server</string>
    <string name="start_download_btn">Start Download</string>
    <string name="lbl_amount">Change Amount</string>
    <string name="lbl_usd_symbol">$</string>
    <string name="lbl_iqd_cr_symbol">IQD</string>
    <string name="lbl_comment">Comment</string>
    <string name="lbl_menu_logout">LogOut</string>
    <string name="lbl_menu_settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="lbl_loading">Please wait ...</string>
    <string name="lbl_paid_amount_usd">Amount Paid $</string>
    <string name="lbl_paid_amount_lc">Amount Paid IQD</string>
    <string name="lbl_change_amount_usd">Amount Change $</string>
    <string name="lbl_change_amount_lc">Amount Change IQD</string>
    <string name="lbl_paid_amount">Amount Paid</string>
    <string name="lbl_change_amount">Amount Change</string>
    <string name="lbl_amount_balance">Balance</string>
    <string name="lbl_product_balance">Qty</string>
    <string name="lbl_received_amount">Received Amount</string>
    <string name="lbl_received_amount_iqd">Received Amount IQD</string>
    <string name="lbl_order_no">Order No</string>
    <string name="lbl_day_name">Day name</string>
    <string name="delete_dialog_title">Delete Record</string>
    <string name="lbl_recipientby">The recipient s name</string>
    <string name="lbl_sign">Signature</string>
    <string name="msg_confirm_delete">Are you sure to delete current record?</string>
    <string name="msg_confirm_deleteAll">Are you sure to delete all data?</string>
    <string name="msg_success_delete">Successfully deleted current selected record </string>
    <string name="msg_failure_delete">Failure deleted current selected record</string>
    <string name="msg_user_not_authorize">You donnt have permission to view this activity. This customer dosnt set him as Salesman </string>
    <string name="msg_user_not_hve_warehouse">You dont have sale warehouse for sales. Contact system administrator </string>
    <string name="msg_exception">There is error happen when try to save</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="save_dialog_title">Save Record</string>
    <string name="msg_save_confirm">Are you sure to save current data?</string>
    <string name="msg_success_saved">Successfully saved data</string>
    <string name="msg_failure_saved">Failure save data</string>
    <string name="msg_error_invalid_date">Invalid entry date</string>
    <string name="msg_error_no_customer">select customer</string>
    <string name="msg_error_no_items">No items add to list</string>
    <string name="msg_error_no_currency">this user did not have currency in his login data</string>
    <string name="msg_error_fail_add_item">"Fail when we want to add new item to item list"</string>
    <string name="msg_error_add_item">Error during add item in list createRow</string>
    <string name="msg_error_invalid_qty">Invalid enter qty</string>
    <string name="msg_error_invalid_product">Select product or enter barcode</string>
    <string name="msg_error_invalid_price">Product dose not have price</string>
    <string name="invoice_payment_title">Invoice Payment</string>
    <string name="msg_error_invalid_received_Amount">Should enter received amount</string>
    <string name="msg_error_invalid_usd_amount_change">Error not valid USD amount equal to USD change amount</string>
    <string name="msg_error_invalid_iqd_amount_change">Error not valid IQD amount equal to IQD change amount</string>
    <string name="msg_error_invalid_paid_Amount">Should enter paid amount</string>
    <string name="msg_error_cu_name">Should enter customer name</string>
    <string name="msg_error_cu_trade_name">Should enter customer trade name</string>
    <string name="msg_error_cu_payment_type">Should select customer payment type</string>
    <string name="msg_error_cu_group">Should select customer group</string>
    <string name="msg_error_address">Should enter address</string>
    <string name="msg_error_mobile">Should enter mobile or phone number</string>
    <string name="msg_error_logtude_latitude">Should enter longtude and latitude</string>
    <string name="msg_error_credit_limit">The customer exceeds the credit limit</string>
    <string name="msg_error_credit_days">The customer exceeds the credit days</string>
    <string name="msg_error_not_paid_amount">The customer is cash then should paid this invoice</string>
    <string name="msg_error_remain_amount">The paid amount greater than invoice amount</string>
    <string name="msg_error_not_remain_amount">Should paid whole invoice amount</string>
    <string name="msg_error_no_from_warehouse">From warehouse is empty. Please select it</string>
    <string name="msg_error_no_to_warehouse">To warehouse is empty. Please select it</string>
    <string name="msg_error_qty_has_digit">Qty should be an integer number</string>
    <string name="lbl_printer_name">Printer Name</string>
    <string name="lbl_select_salesman">Select Salesman</string>
    <string name="lbl_select_van_sale">Select Van sale</string>
    <string name="save_settings">Save Settings</string>
    <string name="scan_btn">Scan...</string>
    <string name="server_url">Server URL</string>
    <string name="select_arabic_language_encode">Select Arabic Language Encode</string>
    <string name="select_latin_language_encode">Select Latin Language Encode</string>
    <string name="ic_home">Home</string>
    <string name="ic_categories">Categories</string>
    <string name="ic_brand">Brand</string>
    <string name="ic_offers">Offers</string>
    <string name="lbl_api_address">API Address</string>
    <string name="hint_enter_api_address">Enter Api Address</string>
    <string name="like_http_192_192_80_200">like: http://192.192.80.200</string>
    <string name="btn_caption_torch">*</string>
    <string name="btn_caption_scan">Scan+</string>
    <string name="lbl_scanning_result">Result:</string>
    <string name="lbl_waiting_result">...</string>
</resources>