<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemsFragment"
        android:enabled="true"
        android:title="@string/ic_home"
        android:icon="@drawable/ic_home">

    </item>
    <item
        android:id="@+id/categoryFragment"
        android:enabled="true"
        android:title="@string/ic_categories"
        android:icon="@drawable/ic_categories">
    </item>
    <item
        android:id="@+id/brandFragment"
        android:enabled="true"
        android:title="@string/ic_brand"
        android:icon="@drawable/ic_brand">
    </item>
    <item
        android:id="@+id/offersFragment"
        android:enabled="true"
        android:title="@string/ic_offers"
        android:icon="@drawable/ic_offer">
    </item>
</menu>