<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewmodel"
                  type="com.mawared.mawaredvansale.controller.auth.AuthViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E2E2E2"
            tools:context=".controller.auth.LoginActivity">

        <RelativeLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relativeLayout">

            <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/image_view_logo"
                    android:layout_centerHorizontal="true"

                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"/>

            <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_below="@id/image_view_logo"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp">

                <TextView
                        android:padding="4dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/client_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="#465A61"
                        android:fontFamily="@font/droid_kufi_regular"/>

                <TextView
                        android:layout_marginBottom="16dp"
                        android:padding="4dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/anton"
                        android:textSize="24sp"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:padding="18dp"
                    android:background="#ffffff"
                    android:layout_below="@id/linearLayout1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="16dp"
                    android:layout_alignParentStart="true" android:layout_marginStart="16dp">

                <EditText
                        android:text="@={viewmodel.userName}"
                        android:inputType="text"
                        android:hint="@string/user_name"
                        android:drawablePadding="16dp"
                        android:drawableEnd="@drawable/ic_email"
                        android:background="@drawable/edit_text_round_gray_background"
                        android:layout_width="match_parent"
                        android:padding="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_height="match_parent"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/droid_kufi_regular"
                        android:textSize="14sp"/>

                <EditText
                        android:text="@={viewmodel.password}"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:drawablePadding="16dp"
                        android:drawableEnd="@drawable/ic_lock"
                        android:background="@drawable/edit_text_round_gray_background"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="12dp"
                        android:padding="12dp"
                        android:layout_height="match_parent"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/droid_kufi_regular"
                        android:textSize="14sp"/>

                <TextView
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginBottom="12dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_kufi_regular"
                        android:textSize="12sp"/>

                <Button
                        android:onClick="@{()-> viewmodel.onLoginButtonClick()}"
                        android:layout_gravity="center_horizontal"
                        android:textAllCaps="false"
                        android:text="@string/sign_in"
                        android:layout_width="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_kufi_regular"
                        android:textColor="@android:color/white"/>

            </LinearLayout>

            <TextView
                    android:layout_marginTop="12dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_centerHorizontal="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_below="@id/linearLayout2"
                    android:textAlignment="center"
                    android:text="@string/do_you_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/droid_kufi_regular"
                    android:textSize="12sp"/>

        </RelativeLayout>

        <include
            android:id="@+id/llProgressBar"
            android:visibility="gone"
            layout="@layout/layout_progress_bar_with_text"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>